--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -255,11 +255,13 @@ ul#navigace {
   .next-caffe_box {
     padding: 2em 5em 3em;
     background: linear-gradient(to bottom right, #BA3CD9 0, var(--topmonks-caffe-orange) 58%);
+    h3 {
+      margin-bottom: 6px;
+    }
     @media (max-width: 839px) {
       padding: 2em;
       h3 {
         font-size: 1.5em;
-        margin-bottom: 0;
       }
       span {
         font-size: 1.4em;
