--- a/blockchain.topmonks.com/src/stylesheets/style.scss
+++ b/blockchain.topmonks.com/src/stylesheets/style.scss
@@ -5,14 +5,17 @@
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
 
-  --mdc-theme-primary: #48435C;
-  --mdc-theme-secondary: #999999;
+  --mdc-theme-primary: #7E50D3;
+  --mdc-theme-primary-dark: #6540A9;
+  --mdc-theme-primary-light: #8363F9;
+
+  --mdc-theme-text-primary-on-light: #48435C;
   --mdc-theme-text-primary-on-dark: #ffffff;
-  --mdc-purple-light: #8363F9;
-  --mdc-pink-primary: #FF5D5D;
-  --mdc-theme--primary-bg: linear-gradient(180deg, #7E50D3 0%, #7E50D3 100%);
-  --mdc-theme-secondary-bg: #F4F8FB;
-  --button-hover: #6540A9;
+  --mdc-theme-text-secondary-on-light: #999999;
+
+
+  --mdc-theme--primary-bg: linear-gradient(180deg, var(--mdc-theme-primary) 0%, var(--mdc-theme-primary) 100%);
+  --mdc-theme--secondary-bg: #F4F8FB;
 }
 
 html {
@@ -41,7 +44,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: geometricPrecision;
-  color: var(--mdc-theme-primary);
+  color: var(--mdc-theme-text-primary-on-light);
 }
 
 .layout-wrapper {
@@ -95,7 +98,7 @@ a {
   }
 
   &:hover {
-    background: var(--button-hover);
+    background: var(--mdc-theme-primary-dark);
     box-shadow: none;
   }
 }
@@ -178,7 +181,7 @@ a {
 /* Section Skills */
 
 .team-skills {
-  background: var(--mdc-theme-secondary-bg);
+  background: var(--mdc-theme--secondary-bg);
 
   .skills_box {
     background-color: var(--mdc-theme-text-primary-on-dark);
@@ -189,7 +192,7 @@ a {
     }
 
     p {
-      color: var(--mdc-theme-secondary);
+      color: var(--mdc-theme-text-secondary-on-light);
     }
   }
 
@@ -314,7 +317,7 @@ a {
 
   p {
     font-size: 18px;
-    color: var(--mdc-theme-secondary);
+    color: var(--mdc-theme-text-secondary-on-light);
     line-height: 26px;
     margin-top: 4px;
   }
