[www.hlidacshopu.cz] reordered Dashboard, removed Notino

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -81,7 +81,7 @@
       </div>
       <div
         class="hs_logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
-        <a class="logo" href="/" title="Go to homepage">
+        <a class="logo" href="/" title="Přejít na hlavní stránku">
           <svg width="184" height="29" viewBox="0 0 184 29" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>Hlídačshopů.cz</title>
             <path
