[www.hlidacshopu.cz] Added link to the new analysis

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -282,6 +282,9 @@
             <li class="list_item"><a
                 href="https://blog.apify.com/black-friday-po%C4%8Desku-kouzla-se-slevami-po-roce-cf48de109ba">Black
                 Friday analýza 2018</a></li>
+            <li class="list_item"><a
+                href="https://medium.com/@jakubbalada/black-friday-2019-s-hl%C3%ADda%C4%8Dem-shop%C5%AF-9a3ddd352a8c">Black
+                Friday analýza 2019</a></li>
             <li class="list_item"><a href="https://github.com/topmonks/hlidac-shopu/issues">Připomínky k rozšíření</a>
             </li>
             <li class="list_item"><a href="mailto:info@hlidacshopu.cz">Kontakt</a></li>
