--- a/www.hlidacshopu.cz/src/stylesheets/_theme.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/_theme.scss
@@ -2,22 +2,29 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,700i&display=swap&subset=latin-ext");
 
 :root {
-  --grey: #2e2828;
-  --dark-grey: #455a64;
-  --light-grey: #4f4f4f;
-  --sub-info-grey: #979797;
-  --sub-title: #515151;
-  --purple: #545fef;
-  --light-purple: #f7f7ff;
-  --dark-purple: #3a42a0;
-  --red: #ca0505;
+  --mdc-theme-primary: #ffff;
+
+  --mdc-theme-secondary: #545fef;
+  --mdc-theme-secondary-dark: #3a42a0;
+  --mdc-theme-secondary-light: #f7f7ff;
+
+  --mdc-theme-third: #ca0505;
+  --mdc-theme-fourth: #5dbd2f;
+
+  --mdc-theme-text-primary-on-light: #000;
+  --mdc-theme-text-secondary-on-light: #2e2828;
+  --mdc-theme-text-third-on-light: #979797;
+
+  --mdc-theme-primary-background: rgba(84, 95, 239, 0.07);
+  --mdc-theme-secondary-background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 24.48%, rgba(84, 95, 239, 0.1) 100%);
+
+  --hs-theme-background: #fff;
+  --hs-theme-border: #e6e6ff;
 
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
 
-  --hs-theme-background: #fff;
-  --hs-theme-border: #e6e6ff;
 }
 
 body {
