--- a/www.hlidacshopu.cz/src/stylesheets/app.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/app.scss
@@ -11,12 +11,12 @@
     line-height: 18px;
     font-weight: 600;
     text-transform: uppercase;
-    color: #ffffff;
+    color: var(--mdc-theme-primary);
     width: 200px;
     height: 54px;
     border: none;
     border-radius: var(--border-radius);
-    background: var(--purple);
+    background: var(--mdc-theme-secondary);
     -webkit-appearance: none;
 
     @media screen and (max-width: 479px) {
@@ -25,7 +25,7 @@
 
     &:hover,
     &:focus {
-      background-color: #3a42a0;
+      background-color: var(--mdc-theme-secondary-dark);
     }
   }
 
@@ -40,7 +40,7 @@
     margin: 16px 0;
 
     &__icon {
-      color: var(--purple);
+      color: var(--mdc-theme-secondary);
       padding: 0 0 0 16px;
     }
 
@@ -50,7 +50,7 @@
       font-family: inherit;
       font-size: 14px;
       line-height: 54px;
-      color: #676767;
+      color: var(--mdc-theme-text-third-on-light);
       padding: 0 1em;
       margin: 0;
       background: none;
@@ -62,7 +62,7 @@
 .hs-result {
   text-align: center;
   a {
-    color: var(--purple);
+    color: var(--mdc-theme-secondary);
   }
   time {
     font-weight: bold;
@@ -76,7 +76,7 @@
     &::after {
       content: "";
       position: absolute;
-      border-bottom: 2px solid black;
+      border-bottom: 2px solid var(--mdc-theme-text-primary-on-light);
       transform: rotate(167.24deg);
       bottom: 0;
       left: 0;
@@ -87,7 +87,7 @@
   .box {
     text-align: center;
     &.box--purple {
-      background: var(--light-purple);
+      background: var(--mdc-theme-secondary-light);
       border-radius: 6px;
       padding: 16px;
     }
@@ -101,13 +101,13 @@
     }
   }
   .actual-price {
-    color: var(--red);
+    color: var(--mdc-theme-third);
     font-weight: bold;
     font-size: 2em;
     line-height: 1.6;
   }
   .claimed-price {
-    color: var(--grey);
+    color: var(--mdc-theme-text-secondary-on-light);
   }
   .discount {
     background: #ffe607;
