--- a/www.hlidacshopu.cz/src/stylesheets/index.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/index.scss
@@ -24,19 +24,19 @@
     line-height: 18px;
     font-weight: 600;
     text-transform: uppercase;
-    color: #ffffff;
+    color: var(--mdc-theme-primary);
     width: 200px;
     height: 54px;
     border: none;
     border-radius: 8px;
-    background: var(--purple);
+    background: var(--mdc-theme-secondary);
 
     @media screen and (max-width: 479px) {
       box-shadow: 0 20px 20px rgba(92, 98, 205, 0.1);
     }
 
     &:hover {
-      background-color: #3a42a0;
+      background-color: var(--mdc-theme-secondary-dark);
     }
   }
 
@@ -44,7 +44,7 @@
     display: flex;
     flex-flow: row;
     align-items: center;
-    background-color: #fff;
+    background-color: var(--mdc-theme-primary);
     border-radius: 8px;
     justify-content: space-between;
 
@@ -63,7 +63,7 @@
       font-family: inherit;
       font-size: 14px;
       line-height: 54px;
-      color: #676767;
+      color: var(--mdc-theme-text-third-on-light);
       padding: 0 1em;
       margin: 0;
       border: none;
@@ -222,7 +222,7 @@
       display: inline-flex;
       justify-content: center;
       align-items: center;
-      background: #fff;
+      background: var(--mdc-theme-primary);
       border-radius: 50%;
       box-shadow: 0 20px 20px rgba(92, 98, 205, 0.1);
 
@@ -290,7 +290,7 @@
   dd.number {
     font-size: 44px;
     font-weight: 700;
-    color: black;
+    color: var(--mdc-theme-text-primary-on-light);
     line-height: 54px;
     text-align: center;
     margin: 0 0 0.5em;
@@ -300,7 +300,7 @@
 
   .references_link {
     font-size: 18px;
-    color: var(--purple);
+    color: var(--mdc-theme-secondary);
     font-weight: 400;
     margin: 0 auto;
     a {
@@ -317,7 +317,7 @@
 
 #hlidac-shopu-modal {
   a {
-    color: var(--purple);
+    color: var(--mdc-theme-secondary);
   }
 
   time {
@@ -333,7 +333,7 @@
     &::after {
       content: "";
       position: absolute;
-      border-bottom: 2px solid black;
+      border-bottom: 2px solid var(--mdc-theme-text-primary-on-light);
       transform: rotate(167.24deg);
       bottom: 0;
       left: 0;
@@ -346,7 +346,7 @@
     text-align: center;
 
     &.box--purple {
-      background: var(--light-purple);
+      background: var(--mdc-theme-secondary-light);
       border-radius: 6px;
       padding: 16px;
     }
@@ -362,14 +362,14 @@
   }
 
   .actual-price {
-    color: var(--red);
+    color: var(--mdc-theme-third);
     font-weight: bold;
     font-size: 2em;
     line-height: 1.6;
   }
 
   .claimed-price {
-    color: var(--grey);
+    color: var(--mdc-theme-text-secondary-on-light);
   }
 
   .discount {
@@ -401,6 +401,6 @@
   position: relative;
 
   > span {
-    background: #fff;
+    background: var(--mdc-theme-primary);
   }
 }
