--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -2,16 +2,21 @@
 @import "common/colors";
 
 :root {
-  --grey: #2e2828;
-  --dark-grey: #455a64;
-  --light-grey: #4f4f4f;
-  --secondary-light-grey: #E7EBEF;
-  --sub-info-grey: #979797;
-  --sub-title: #515151;
-  --purple: #545fef;
-  --light-purple: #f7f7ff;
-  --dark-purple: #3a42a0;
-  --red: #ca0505;
+  --mdc-theme-primary: #ffff;
+
+  --mdc-theme-secondary: #545fef;
+  --mdc-theme-secondary-dark: #3a42a0;
+  --mdc-theme-secondary-light: #f7f7ff;
+
+  --mdc-theme-third: #ca0505;
+  --mdc-theme-fourth: #5dbd2f;
+
+  --mdc-theme-text-primary-on-light: #000;
+  --mdc-theme-text-secondary-on-light: #2e2828;
+  --mdc-theme-text-third-on-light: #979797;
+
+  --mdc-theme-primary-background: rgba(84, 95, 239, 0.07);
+  --mdc-theme-secondary-background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 24.48%, rgba(84, 95, 239, 0.1) 100%);
 
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
@@ -43,13 +48,10 @@ body {
 }
 
 a:link {
-  color: var(--purple);
-}
-a:visited {
-  color: #9841bf;
+  color: var(--mdc-theme-secondary);
 }
 a:hover {
-  color: var(--dark-purple);
+  color: var(--mdc-theme-secondary-dark);
 }
 
 header {
@@ -68,14 +70,14 @@ header {
   }
 
   li a {
-    color: black;
+    color: var(--mdc-theme-text-primary-on-light);
     &:link,
     &:visited {
-      color: black;
+      color: var(--mdc-theme-text-primary-on-light);
     }
 
     &:hover {
-      color: var(--purple);
+      color: var(--mdc-theme-secondary);
     }
   }
 
@@ -84,7 +86,7 @@ header {
     width: 100vw;
     z-index: 1000;
     top: 0;
-    background-color: #fff;
+    background-color: var(--mdc-theme-primary);
   }
 }
 
@@ -116,7 +118,7 @@ h2 {
 h2.sub-title {
   font-size: 13px;
   font-weight: normal;
-  color: var(--sub-title);
+  color: var(--mdc-theme-text-secondary-on-light);
   line-height: 16px;
   text-align: left;
   margin-top: 2em;
@@ -133,7 +135,7 @@ h3 {
 p {
   font-family: "Open Sans", sans-serif;
   font-kerning: normal;
-  color: var(--grey);
+  color: var(--mdc-theme-text-secondary-on-light);
   line-height: 1.75;
 }
 
@@ -158,7 +160,7 @@ hr {
 
   p {
     font-size: 16px;
-    color: var(--grey);
+    color: var(--mdc-theme-text-secondary-on-light);
   }
   .icon svg {
     height: 100%;
@@ -177,14 +179,14 @@ img.responsive {
     font-weight: 600;
     text-decoration: none;
     text-transform: uppercase;
-    color: #ffffff;
-    background-color: var(--purple);
+    color: var(--mdc-theme-primary);
+    background-color: var(--mdc-theme-secondary);
     box-shadow: 0 20px 20px rgba(92, 98, 205, 0.1);
     padding: 14px 48px;
     border-radius: 8px;
 
     &:hover {
-      background-color: var(--dark-purple);
+      background-color: var(--mdc-theme-secondary-dark);
     }
 
     @media (max-width: 739px) {
@@ -197,31 +199,31 @@ img.responsive {
 
 .text--grey {
   font-size: 16px;
-  color: var(--grey);
+  color: var(--mdc-theme-text-secondary-on-light);
   text-align: center;
   text-transform: uppercase;
 }
 
 .text--dark-grey {
   font-size: 13px;
-  color: var(--dark-grey);
+  color: var(--mdc-theme-text-secondary-on-light);
   line-height: 16px;
   text-transform: uppercase;
 }
 
 .text--light-grey {
   font-size: 14px;
-  color: var(--light-grey);
+  color: var(--mdc-theme-secondary-light);
 }
 
 .sub-info--grey {
   font-size: 13px;
-  color: var(--sub-info-grey);
+  color: var(--mdc-theme-text-third-on-light);
   line-height: 20px;
 }
 
 .text--purple {
-  color: var(--purple);
+  color: var(--mdc-theme-secondary);
   a {
     text-decoration: none;
   }
@@ -254,17 +256,13 @@ header {
     display: inline-flex;
 
     &:hover {
-      color: var(--purple);
+      color: var(--mdc-theme-secondary);
     }
   }
 }
 
 section.purple-gradient {
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.1) 24.48%,
-    rgba(84, 95, 239, 0.1) 100%
-  );
+  background: var(--mdc-theme-secondary-background);
   padding-bottom: 2em;
 }
 
@@ -273,7 +271,7 @@ nav {
 }
 
 footer {
-  background: rgba(84, 95, 239, 0.07);
+  background: var(--mdc-theme-primary-background);
 
   h3 {
     font-weight: normal;
@@ -286,7 +284,7 @@ footer {
     li {
       font-size: 14px;
       font-weight: normal;
-      color: var(--purple);
+      color: var(--mdc-theme-secondary);
       line-height: 26px;
       text-decoration: none;
       list-style: none;
@@ -300,14 +298,14 @@ footer {
   }
 
   a {
-    color: var(--purple);
+    color: var(--mdc-theme-secondary);
     &:link,
     &:visited {
-      color: var(--purple);
+      color: var(--mdc-theme-secondary);
     }
 
     &:hover {
-      color: var(--dark-purple);
+      color: var(--mdc-theme-secondary-dark);
     }
   }
 
@@ -333,11 +331,11 @@ footer {
     a:link,
     a:visited,
     span {
-      color: var(--dark-grey);
+      color: var(--mdc-theme-text-secondary-on-light);
       text-decoration: none;
     }
     a:hover {
-      color: var(--dark-purple);
+      color: var(--mdc-theme-secondary-dark);
       text-decoration: underline;
     }
   }
@@ -347,7 +345,7 @@ footer {
       height: 32px;
     }
     .sub-info--grey {
-      color: var(--dark-grey);
+      color: var(--mdc-theme-text-secondary-on-light);
       height: 40px;
     }
   }
@@ -425,7 +423,7 @@ footer {
   }
 
   .hamburger__bar {
-    background-color: var(--purple);
+    background-color: var(--mdc-theme-secondary);
     width: 20px;
     height: 2px;
     border-radius: 10px;
@@ -459,23 +457,23 @@ footer {
 
 .app-bar--sticky {
   .hamburger .hamburger__bar {
-    background: var(--purple);
+    background: var(--mdc-theme-secondary);
   }
 
   .hamburger .hamburger__container::after {
-    color: var(--purple);
+    color: var(--mdc-theme-secondary);
   }
 }
 
 .app-bar.app-bar--open {
-  color: var(--purple);
+  color: var(--mdc-theme-secondary);
 
   .hamburger__container::after {
-    color: var(--purple);
+    color: var(--mdc-theme-secondary);
   }
 
   .hamburger__bar {
-    background-color: var(--purple);
+    background-color: var(--mdc-theme-secondary);
   }
 }
 
@@ -498,7 +496,7 @@ footer {
       border-top: 1px solid #eaeef2;
     }
     .menu__list a {
-      color: var(--purple);
+      color: var(--mdc-theme-secondary);
       display: block;
       padding: 12px;
       margin: 4px;
@@ -549,7 +547,7 @@ footer {
     height: 32px;
     z-index: 1001;
     line-height: 32px;
-    border: 1px solid var(--purple);
+    border: 1px solid var(--mdc-theme-secondary);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -563,10 +561,10 @@ footer {
     }
 
     &:hover {
-      border-color: var(--dark-purple);
+      border-color: var(--mdc-theme-secondary-dark);
 
       a {
-        color: var(--dark-purple) !important;
+        color: var(--mdc-theme-secondary-dark) !important;
       }
     }
   }
@@ -590,7 +588,7 @@ footer {
   position: relative;
   text-indent: -9999em;
   border: 4px solid rgba(255, 255, 255, 0.8);
-  border-left-color: var(--red);
+  border-left-color: var(--mdc-theme-third);
   transform: translateZ(0);
   animation: load8 1.1s infinite linear;
 }
