--- a/www.hlidacshopu.cz/src/stylesheets/md-tabs.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/md-tabs.scss
@@ -1,24 +1,4 @@
-.wrapper--small-devices {
-  display: inherit;
-  h3{
-    font-size: 13px;
-    font-weight: 600;
-    color: var(--purple);
-    text-align: left;
-    border-bottom: 0.1rem solid var(--purple);
-    margin-top: 3em;
-    padding-bottom: 4px;
-  }
-  img {
-    width: 100%;
-  }
-}
-
-@media screen and(min-width: 840px) {
-  .wrapper--small-devices {
-    display: none;
-  }
-  .wrapper {
+ .wrapper {
     width: 100%;
     min-height: 44em;
     margin: 0 auto;
@@ -26,9 +6,9 @@
   .tabs {
     margin-top: 4em;
     position: relative;
-    background: #FFFFFF;
+    background: var(--mdc-theme-primary);
     display: inline-flex;
-    border-bottom: 1px solid var(--secondary-light-grey);
+    border-bottom: 1px solid var(--mdc-theme-text-third-on-light);
     padding-top: 4px;
   }
   .tabs::before,
@@ -52,15 +32,20 @@
   .tab-label {
     font-size: 13px;
     position: relative;
-    display: inline-flex;
     text-align: left;
-    width: 320px;
-    background: #FFFFFF;
-    color: var(--sub-info-grey);
+    background: var(--mdc-theme-primary);
+    color: var(--mdc-theme-text-third-on-light);
     padding-bottom: 8px;
     cursor: pointer;
     top: 0;
     transition: all 0.45s;
+    @media screen and (min-width: 840px) {
+      width: 320px;
+      display: inline-flex;
+    }
+    @media (max-width: 839px) {
+      display: block;
+    }
   }
   .tab-label:hover {
     top: -0.25rem;
@@ -73,59 +58,34 @@
     top: 4em;
     left: 0;
     padding: 1.618rem;
-    background: #fff;
+    background: var(--mdc-theme-primary);
     color: #2c3e50;
     opacity: 0;
     transition: all 0.45s;
     margin: 0 auto;
-    img {
-      width: 830px;
+    @media screen and (min-width: 840px) {
+      img {
+        width: 830px;
+      }
     }
   }
   .tab-switch:checked + .tab-label {
     font-size: 13px;
     transition: all 0.45s, text-shadow .25s;
-    text-shadow: 0 0 .5px var(--purple), 0 0 .5px var(--purple);
-    color: var(--purple);
-    background: #fff;
-    border-bottom: 0.2rem solid var(--purple);
+    text-shadow: 0 0 .5px var(--mdc-theme-secondary), 0 0 .5px var(--mdc-theme-secondary);
+    color: var(--mdc-theme-secondary);
+    background: var(--mdc-theme-primary);
+    border-bottom: 0.2rem solid var(--mdc-theme-secondary);
     z-index: 1;
     top: -0.0625rem;
-    width: 320px;
+    @media screen and (min-width: 840px) {
+      width: 320px;
+    }
   }
   .tab-switch:checked + label + .tab-content {
     z-index: 2;
     opacity: 1;
     transition:all 0.45s;
   }
-}
 
-@media (max-width: 560px) {
-  .wrapper {
-    display: none;
-  }
-  .wrapper--small-devices {
-    display: inherit;
-  }
-}
-@media (min-width: 561px) and (max-width: 839px) {
-  .wrapper {
-    display: none;
-  }
-  .wrapper--small-devices {
-    display: inherit;
-    h3{
-      font-size: 13px;
-      font-weight: 600;
-      color: var(--purple);
-      text-align: left;
-      border-bottom: 0.1rem solid var(--purple);
-      margin-top: 3em;
-      padding-bottom: 4px;
-    }
-    img {
-      width: 100%;
-    }
-  }
-}
 
