--- a/www.hlidacshopu.cz/src/stylesheets/md-tabs.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/md-tabs.scss
@@ -2,9 +2,6 @@
   width: 100%;
   min-height: 44em;
   margin: 0 auto;
-  @media (max-width: 639px) {
-    min-height: 32em;
-  }
 }
 
 .tabs {
@@ -67,62 +64,85 @@
   text-align: left;
   background: var(--mdc-theme-primary);
   color: var(--mdc-theme-text-third-on-light);
-  padding-bottom: 8px;
   cursor: pointer;
   top: 0;
   transition: all 0.45s;
   display: inline-flex;
+  align-items: flex-end;
+
+  .tab--number {
+    font-size: 38px;
+    font-weight: 600;
+    color: var(--mdc-theme-text-third-on-light);
+    display: inline-table;
+    margin: 0;
+    @media (max-width: 839px) {
+      padding-bottom: 6px;
+    }
+  }
+  .tab--info {
+    padding-left: 4px;
+  }
+
   @media screen and (min-width: 840px) {
-    width: 320px;
+    width: 325px;
   }
   @media (max-width: 419px) {
-    display: block;
+    display: inline-flex;
     color: var(--mdc-theme-text-secondary-on-light);
   }
   @media (min-width: 420px) and (max-width: 839px) {
-    display: block;
+    display: inline-flex;
     color: var(--mdc-theme-text-secondary-on-light);
   }
-}
-
-.tab-label:hover {
-  top: -4px;
-  transition: top 0.25s;
 }
 
 .tab-content {
   height: 13rem;
   position: absolute;
   z-index: 1;
-  top: 4em;
+  top: 6em;
   left: 0;
   padding: 1.618rem;
   visibility: hidden;
   transition: 0.45s;
   margin: 0 auto;
-  @media screen and (max-width: 839px) {
-    height: 13rem;
+  width: 100%;
+  @media (min-width: 425px) and (max-width: 839px) {
     position: absolute;
     z-index: 1;
-    top: 13em;
+    top: 20em;
     left: 0;
     img {
-      margin: 0 auto;
       width: 100%;
+      margin: 0 auto;
+    }
+  }
+  @media (max-width: 424px) {
+    position: absolute;
+    z-index: 1;
+    top: 25em;
+    left: 0;
+    img {
+      width: 100%;
+      margin: 0 auto;
     }
   }
 }
 
 .tab-switch:checked + .tab-label {
   font-size: 13px;
-  transition: all 0.45s;
   color: var(--mdc-theme-secondary);
   background: var(--mdc-theme-primary);
   border-bottom: 3px solid var(--mdc-theme-secondary);
   z-index: 1;
-  top: -0.0625rem;
+
+  .tab--number, .tab--info {
+    color: var(--mdc-theme-secondary);
+  }
+
   @media screen and (min-width: 840px) {
-    width: 320px;
+    width: 325px;
   }
   @media screen and (max-width: 839px) {
     text-shadow: 0 0 .5px var(--mdc-theme-secondary), 0 0 .5px var(--mdc-theme-secondary);
@@ -130,10 +150,9 @@
   }
 }
 
-.tab-switch:checked + label + .tab-content {
+.tab-switch:checked + label + .tab-content + .tab--number + .tab--info {
   z-index: 2;
   visibility: visible;
   transition: all 0.45s;
 }
-
 
