--- a/www.hlidacshopu.cz/src/stylesheets/md-tabs.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/md-tabs.scss
@@ -4,158 +4,86 @@
   margin: 0 auto;
 }
 
-.tabs {
-  margin-top: 4em;
-  position: relative;
-  background: var(--mdc-theme-primary);
-  display: inline-flex;
-  border-bottom: 1px solid var(--mdc-theme-secondary-light);
-  padding-top: 4px;
-  @media (max-width: 419px) {
-    display: block;
-  }
-  @media (min-width: 420px) and (max-width: 839px) {
-    display: block;
-    margin: 2em auto;
-  }
-  @media (min-width: 680px) and (max-width: 839px) {
-    width: 540px;
-    margin: 2em auto;
-  }
-}
-
-.tabs::before,
-.tabs::after {
-  content: "";
-  display: table;
-}
-
-.tabs::after {
-  clear: both;
-}
-
-.tab {
-  float: left;
-  margin: 0 14px -2px 0;
-
-  &:last-of-type {
-    margin-right: 0;
-  }
-
-  @media screen and (max-width: 839px) {
-    padding-bottom: 16px;
-    margin: 0 auto;
-  }
-}
-
-.tab-switch:checked + label + .tab-content {
-  z-index: 2;
-  visibility: visible;
-  transition: all 0.45s;
-}
-
-.tab-switch {
-  display: none;
-}
-
-.tab-label {
-  font-size: 13px;
-  position: relative;
-  text-align: left;
-  background: var(--mdc-theme-primary);
-  color: var(--mdc-theme-text-third-on-light);
-  cursor: pointer;
-  top: 0;
-  transition: all 0.45s;
-  display: inline-flex;
-  align-items: flex-end;
-
-  .tab--number {
-    font-size: 34px;
-    font-weight: 600;
-    color: var(--mdc-theme-text-third-on-light);
-    display: inline-table;
-    margin: 0;
-    @media screen and (max-width: 839px) {
-      padding-bottom: 6px;
-    }
-  }
-
-  .tab--info {
-    padding-left: 4px;
-  }
-
-  @media screen and (min-width: 840px) {
-    width: 320px;
-  }
-  @media (max-width: 419px) {
-    display: inline-flex;
-    color: var(--mdc-theme-text-secondary-on-light);
-  }
-  @media (min-width: 420px) and (max-width: 839px) {
-    display: inline-flex;
-    color: var(--mdc-theme-text-secondary-on-light);
-  }
-}
-
-.tab-content {
-  height: 13rem;
-  position: absolute;
-  z-index: 1;
-  top: 6em;
-  left: 0;
-  padding: 1.618rem;
-  visibility: hidden;
-  transition: 0.45s;
-  margin: 0 auto;
-  @media screen and (min-width: 1440px) {
+.tab-list {
+  ol {
+    display: flex;
     width: 100%;
-  }
-  @media (min-width: 425px) and (max-width: 839px) {
-    position: absolute;
-    z-index: 1;
-    top: 20em;
-    left: 0;
-    img {
-      width: 100%;
-      margin: 0 auto;
+    padding: 0;
+
+    li {
+      font-size: 13px;
+      color: var(--mdc-theme-text-third-on-light);
+      border-bottom: 3px solid transparent;
+      padding-bottom: 1em;
+      margin-right: 2em;
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+
+      a {
+        color: var(--mdc-theme-text-third-on-light);
+        text-decoration: none;
+      }
+    }
+
+    li, a {
+      &:hover {
+        color: var(--mdc-theme-secondary);
+        background: var(--mdc-theme-primary);
+        border-bottom-color: var(--mdc-theme-secondary);
+        width: fit-content;
+      }
+    }
+
+    @media (max-width: 1040px) {
+      display: inline-block;
+      li {
+        margin: 0 1em 1em 1em;
+        padding-bottom: 0.5em;
+
+      }
     }
   }
-  @media (max-width: 424px) {
-    position: absolute;
-    z-index: 1;
-    top: 25em;
-    left: 0;
-    img {
-      width: 100%;
-      margin: 0 auto;
-    }
-  }
-}
 
-.tab-switch:checked + .tab-label {
-  font-size: 13px;
-  color: var(--mdc-theme-secondary);
-  background: var(--mdc-theme-primary);
-  border-bottom: 3px solid var(--mdc-theme-secondary);
-  z-index: 1;
-
-  .tab--number, .tab--info {
-    color: var(--mdc-theme-secondary);
-  }
-
-  @media screen and (min-width: 840px) {
-    width: 320px;
-  }
-  @media screen and (max-width: 839px) {
-    text-shadow: 0 0 .5px var(--mdc-theme-secondary), 0 0 .5px var(--mdc-theme-secondary);
+  @media screen and (max-width: 1040px) {
     margin: 0 auto;
   }
 }
 
-.tab-switch:checked + label + .tab-content + .tab--number + .tab--info {
-  z-index: 2;
+.tabs {
+  position: relative;
+  @media screen and(min-width: 840px) {
+    min-height: 600px;
+    width: 900px;
+    margin: 0 auto;
+  }
+  @media (max-width: 739px) {
+    min-height: 260px;
+    img {
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
+  @media (min-width: 740px) and (max-width: 1040px) {
+    min-height: 600px;
+    img {
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
+}
+
+.tabs .tab {
+  visibility: hidden;
+  position: absolute;
+  left: 0;
+  top: 0
+}
+
+.tabs--open-tab-1 #tab-1,
+.tabs--open-tab-2 #tab-2,
+.tabs--open-tab-3 #tab-3 {
   visibility: visible;
-  transition: all 0.45s;
 }
 
