--- a/www.hlidacshopu.cz/src/stylesheets/app.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/app.scss
@@ -5,164 +5,168 @@ html {
   padding: 0;
 }
 
-body {
-  background: url("https://res.cloudinary.com/topmonks/image/upload/v1575977345/www.hlidacshopu.cz/app/light-mode_bgnd.jpg") center bottom no-repeat;
-  background-size: 100% 45%;
-  @media (min-width: 375px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1575977345/www.hlidacshopu.cz/app/light-mode_bgnd.jpg") center bottom no-repeat;
-    background-size: 100% 60%;
-  }
-}
+@media screen and (prefers-color-scheme: light) {
 
-main {
-  background: url("https://res.cloudinary.com/topmonks/image/upload/v1575977546/www.hlidacshopu.cz/app/curves_bgnd.svg") center bottom no-repeat;
-  background-size: 100%;
-}
-
-.mdc-top-app-bar__title {
-  padding: 0;
-  margin: 0 auto;
-}
-
-.mdc-top-app-bar--fixed-adjust {
-  @media (max-width: 374px) {
-    padding-top: 8em;
-  }
-  @media (min-width: 375px) {
-    padding-top: 11em;
-  }
-}
-
-.hs-form {
-  --border-radius: 8px;
-  text-align: center;
-
-
-  .button,
-  button {
-    font-family: inherit;
-    font-size: 15px;
-    line-height: 18px;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: var(--mdc-theme-primary);
-    width: 200px;
-    height: 54px;
-    border: none;
-    border-radius: var(--border-radius);
-    background: var(--mdc-theme-secondary);
-    -webkit-appearance: none;
-
-    @media screen and (max-width: 479px) {
-      box-shadow: 0 20px 20px rgba(92, 98, 205, 0.1);
-    }
-
-    &:hover,
-    &:focus {
-      background-color: var(--mdc-theme-secondary-dark);
+  body {
+    background: url("https://res.cloudinary.com/topmonks/image/upload/v1575981461/www.hlidacshopu.cz/app/light-mode_bgnd.png") center bottom no-repeat;
+    background-size: 100% 45%;
+    @media (min-width: 375px) {
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1575981461/www.hlidacshopu.cz/app/light-mode_bgnd.png") center bottom no-repeat;
+      background-size: 100% 60%;
     }
   }
 
-  .hs-textfield {
-    border: 1px solid var(--hs-theme-border);
-    border-radius: var(--border-radius);
-    background: var(--mdc-theme-primary);
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-    background-color: (--hs-theme-background);
-    justify-content: space-between;
-    margin: 16px 0;
 
-    &__icon {
-      color: var(--mdc-theme-secondary);
-      padding: 0 0 0 16px;
+  main {
+    background: url("https://res.cloudinary.com/topmonks/image/upload/v1575977546/www.hlidacshopu.cz/app/curves_bgnd.svg") center bottom no-repeat;
+    background-size: 100%;
+  }
+
+  .mdc-top-app-bar__title {
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .mdc-top-app-bar--fixed-adjust {
+    @media (max-width: 374px) {
+      padding-top: 8em;
     }
-
-    input {
-      -webkit-appearance: none;
-      border: none;
-      font-family: inherit;
-      font-size: 12px;
-      line-height: 54px;
-      color: var(--mdc-theme-text-third-on-light);
-      padding: 0 1em;
-      margin: 0;
-      background: none;
-      flex-grow: 2;
-    }
-  }
-}
-
-.hs-result {
-  text-align: center;
-
-  a {
-    color: var(--mdc-theme-secondary);
-  }
-
-  time {
-    font-weight: bold;
-    line-height: 2;
-  }
-
-  del {
-    text-decoration: none;
-    position: relative;
-    display: inline-block;
-
-    &::after {
-      content: "";
-      position: absolute;
-      border-bottom: 2px solid var(--mdc-theme-text-primary-on-light);
-      transform: rotate(167.24deg);
-      bottom: 0;
-      left: 0;
-      height: calc(50% - 1px);
-      width: 100%;
+    @media (min-width: 375px) {
+      padding-top: 11em;
     }
   }
 
-  .box {
+  .hs-form {
+    --border-radius: 8px;
     text-align: center;
 
-    &.box--purple {
-      background: var(--mdc-theme-secondary-light);
-      border-radius: 6px;
-      padding: 16px;
+
+    .button,
+    button {
+      font-family: inherit;
+      font-size: 15px;
+      line-height: 18px;
+      font-weight: 600;
+      text-transform: uppercase;
+      color: var(--mdc-theme-primary);
+      width: 200px;
+      height: 54px;
+      border: none;
+      border-radius: var(--border-radius);
+      background: var(--mdc-theme-secondary);
+      -webkit-appearance: none;
+
+      @media screen and (max-width: 479px) {
+        box-shadow: 0 20px 20px rgba(92, 98, 205, 0.1);
+      }
+
+      &:hover,
+      &:focus {
+        background-color: var(--mdc-theme-secondary-dark);
+      }
+    }
+
+    .hs-textfield {
+      border: 1px solid var(--hs-theme-border);
+      border-radius: var(--border-radius);
+      background: var(--mdc-theme-primary);
+      display: flex;
+      flex-flow: row;
+      align-items: center;
+      background-color: (--hs-theme-background);
+      justify-content: space-between;
+      margin: 16px 0;
+
+      &__icon {
+        color: var(--mdc-theme-secondary);
+        padding: 0 0 0 16px;
+      }
+
+      input {
+        -webkit-appearance: none;
+        border: none;
+        font-family: inherit;
+        font-size: 12px;
+        line-height: 54px;
+        color: var(--mdc-theme-text-third-on-light);
+        padding: 0 1em;
+        margin: 0;
+        background: none;
+        flex-grow: 2;
+      }
     }
   }
 
-  .sprite {
-    display: block;
-    padding-bottom: 0.5em;
+  .hs-result {
+    text-align: center;
 
-    svg {
-      height: 32px;
+    a {
+      color: var(--mdc-theme-secondary);
     }
-  }
 
-  .actual-price {
-    color: var(--mdc-theme-third);
-    font-weight: bold;
-    font-size: 2em;
-    line-height: 1.6;
-  }
+    time {
+      font-weight: bold;
+      line-height: 2;
+    }
 
-  .claimed-price {
-    color: var(--mdc-theme-text-secondary-on-light);
-  }
+    del {
+      text-decoration: none;
+      position: relative;
+      display: inline-block;
 
-  .discount {
-    background: #ffe607;
-    border-radius: 50%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+      &::after {
+        content: "";
+        position: absolute;
+        border-bottom: 2px solid var(--mdc-theme-text-primary-on-light);
+        transform: rotate(167.24deg);
+        bottom: 0;
+        left: 0;
+        height: calc(50% - 1px);
+        width: 100%;
+      }
+    }
 
-    width: 48px;
-    height: 48px;
-    line-height: 48px;
+    .box {
+      text-align: center;
+
+      &.box--purple {
+        background: var(--mdc-theme-secondary-light);
+        border-radius: 6px;
+        padding: 16px;
+      }
+    }
+
+    .sprite {
+      display: block;
+      padding-bottom: 0.5em;
+
+      svg {
+        height: 32px;
+      }
+    }
+
+    .actual-price {
+      color: var(--mdc-theme-third);
+      font-weight: bold;
+      font-size: 2em;
+      line-height: 1.6;
+    }
+
+    .claimed-price {
+      color: var(--mdc-theme-text-secondary-on-light);
+    }
+
+    .discount {
+      background: #ffe607;
+      border-radius: 50%;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 48px;
+      height: 48px;
+      line-height: 48px;
+    }
   }
 }
 
@@ -170,7 +174,20 @@ main {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: var(--mdc-theme-text-primary-on-light);
+    background: url("https://res.cloudinary.com/topmonks/image/upload/v1575981710/www.hlidacshopu.cz/app/dark-mode_bgnd.png") center bottom no-repeat, var(--mdc-theme-text-primary-on-light);
+    background-size: 100% 45%;
+    @media (min-width: 375px) {
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1575981710/www.hlidacshopu.cz/app/dark-mode_bgnd.png") center bottom no-repeat, var(--mdc-theme-text-primary-on-light);
+      background-size: 100% 60%;
+    }
+  }
+  svg path {
+    fill: #FFFFFF;
+    color: #FFFFFF;
+    background-color: #FFFFFF;
+  }
+  .hs-form .hs-textfield {
+    background: #FFFFFF;
   }
 }
 
